--- a/style.css
+++ b/style.css
@@ -101,12 +101,14 @@ header{
 
 .btn-1{
     display: inline-block;
-    background-color: rgba(170, 177, 255, 0.3);
+    background-color: #fff;
+    box-shadow: 0px 0px 20px rgba(135, 141, 214, 0.3);
     border: 1px solid #000;
     margin: 35px 10px 0px 0px;
     padding: 15px 25px;
     color: #000;
     border-radius: 25px;
+    transition: ease-out .2s;
 }
 
 .btn-1:hover{
